gl31-master/src/test/deca/context/invalid/complet/bad_cast2.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 11: Erreur, conversion float en boolean impossible
//
// Historique:
//    cree le 24/01/2021
{
    float a;
    boolean b = (boolean)(a);
}